// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`codegen element > element > element 1`] = `
"const { createElementVnode: _createElementVnode, toDisplayString: _toDisplayString } = Vue
return function render(_ctx, _cache){return _createElementVnode(\\"div\\", null, [ _createElementVnode(\\"p\\", null, [ _createElementVnode(\\"span\\", null, \\"Hi, Tom.\\"), \\" My name is \\" + _toDisplayString(_ctx.username)] )] )}"
`;

exports[`codegen element > element > interpolation/string 1`] = `
"const { toDisplayString: _toDisplayString, createElementVnode: _createElementVnode } = Vue
return function render(_ctx, _cache){return _createElementVnode(\\"div\\", null, [ \\"hi, \\", _createElementVnode(\\"span\\", null, \\"I'm \\" + _toDisplayString(_ctx.message))] )}"
`;

exports[`codegen element > interpolation/string 1`] = `
"const { toDisplayString: _toDisplayString, createElementVnode: _createElementVnode } = Vue
return function render(_ctx, _cache){return _createElementVnode(\\"div\\", null, \\"hi, \\" + _toDisplayString(_ctx.message))}"
`;

exports[`codegen element 1`] = `
"const { createElementVnode: _createElementVnode } = Vue
return function render(_ctx, _cache){return _createElementVnode(\\"div\\", null)}"
`;

exports[`codegen interpolation 1`] = `
"const { toDisplayString: _toDisplayString } = Vue
return function render(_ctx, _cache){return _toDisplayString(_ctx.message)}"
`;

exports[`codegen string 1`] = `"return function render(_ctx, _cache){return \\"hi\\"}"`;
